--- a/src/App.css
+++ b/src/App.css
@@ -13,12 +13,21 @@
     font-weight: normal;
     font-style: normal;
   }
+
+
+  *, *::before, *::after {
+  box-sizing: border-box;
+}
+
+
+
 html, body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-  }
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden;
+}
+
   
   body {
     font-family: 'MerriweatherCustom', serif;
