--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -1,12 +1,14 @@
 .nav-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px 10px;
-    background-color: rgba(255, 255, 255, 0);
-    width: 99vw;
-    position: absolute;
-  }
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 15px 10px;
+  background-color: rgba(255, 255, 255, 0);
+  width: 100%;
+  position: absolute;
+  left: 0;
+}
+
   
   .nav-links {
     display: flex;
